# external-control

./: CMakeLists.txt  README.md
gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/resources/: resources.qrc
include/: client.h  common.h
src/: CMakeLists.txt  client.cpp
